--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+
+
+
     <TextView
-        android:id="@+id/textView"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="30sp"
+        android:layout_height="fill_parent"
+        android:gravity="center_vertical|center_horizontal"
         android:text="@string/hey_there"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="171dp"
-        tools:layout_editor_absoluteY="333dp"
+        android:textSize="30sp"
         tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
